feat: complete deployment debugability
